# codex-usage-ball

./: .gitignore  LICENSE  README.en.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: product-spec.md  tech-decision.md
src/: App.css  App.test.ts  App.tsx  settings.test.ts  settings.ts  skins.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/styles/: skins.css
