[package]
name = "codex-usage-ball"
version = "0.1.1"
description = "Codex 用量悬浮球"
authors = ["jiaheng6"]
edition = "2021"

[lib]
name = "codex_usage_ball_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
